# qlib_rd_agent

./: .env.example  .gitignore  FIX_HARDCODED_PATHS_SUMMARY.md  PROJECT_WORKFLOW.md  README.md  SOLUTION_HARDCODED_PATHS.md  SOLUTION_README_ZH.md  debug_litellm.py  litellm_config.yaml  pyproject.toml  verify_fix.sh
docs/integrations/: 2026-03-17-rdagent-run-log-archive-operator-notes.md
docs/plans/: 2026-03-17-rdagent-candidate-contract-design.md  2026-03-17-rdagent-candidate-contract-implementation-plan.md  2026-03-17-rdagent-run-log-archive-design.md  2026-03-17-rdagent-run-log-archive-implementation-plan.md  2026-03-17-rdagent-source-data-chain-design.md  2026-03-17-rdagent-source-data-chain-implementation-plan.md
scripts/: run.sh  setup_windows.ps1  setup_wsl.sh
src/: config.py  main.py
src/bridge/: dropbox_sync.py
src/runner/: patch_generated_code.py  patch_monitor.py  prepare_data.py  qlib_runner.py
src/utils/: dropbox_client.py
tests/unit/: test_dropbox_sync_contract.py  test_main_run_archive.py  test_prepare_data_contract.py  test_qlib_runner_contract.py
