[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qlib_rd_agent"
version = "0.1.0"
description = "Qlib RD-Agent orchestration layer with Dropbox sync and LiteLLM integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Development Team" }
]
keywords = ["qlib", "rdagent", "dropbox", "litellm", "volcengine", "aihubmix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rdagent",
    "litellm>=1.0.0",
    "dropbox>=12.0.2",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "pytest>=7.0",
]

[project.scripts]
qlib-rd-agent = "src.main:main"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | tmp_qlib
)/
'''

[tool.hatch.build.targets.wheel]
packages = ["src"]
